add more recipe steps to lasagna

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -58,6 +58,17 @@
         <ol>
             <li><strong>Heat olive oil</strong> over medium heat and <strong>the diced onion.</strong> Cook for 10 minutes</li>
             <li><strong>Add ground beef and sausage</strong> and increase heat to medium-high. Break up meat into small bits and cook for 8-10 minutes. <strong>Add garlic during last minutes</strong></li>
+            <li><strong>Add chicken broth, marinara sauce, tomato paste, hot sauce, and Worcestershire sauce.</strong> Bring to a boil then cover and reduce to a simmer.</li>
+        </ol>
+        <h3>Cook Noodles</h3>
+        <ol>
+            <li>Preheat oven to <strong>375 degrees</strong></li>
+            <li><strong>Bring a large pot of salted water to a rolling boil.</strong> <strong>Add lasagna noodles</strong> and cook until al dente. Gently stir while cooking.</li>
+            <li><strong>Drain and rinse with cold water.</strong></li>
+            <li>Lay the cooled noodles on parchment paper.</li>
+        </ol>
+        <h3>Assemble</h3>
+        <ol>
             <li></li>
         </ol>
     </body>
