add final steps to lasagna recipe

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -49,6 +49,7 @@
             <li>2.5 cups mozzarella cheese</li>
         </ul>
         
+        
         <h2>Steps</h2>
         <h3>Prep</h3>
         <ol>
@@ -71,5 +72,11 @@
         <ol>
             <li></li>
         </ol>
+        <h3>Bake</h3>
+        <ol>
+            <li><strong>Bake for 35 minutes.</strong> Remove cover and bake for 10 additional minutes.</li>
+            <li>Remove from over and garnish with fresh parsley. <strong>Let stand for 15 minutes prior to serving</strong> to allow to set.</li>
+        </ol>
+
     </body>
 </head>
