fix grammar and typos

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -18,7 +18,6 @@
         </p>
 
         <h2>Ingredients</h2>
-
         <h3>Cheese Filling</h3>
         <ul>
             <li>15 oz. ricotta cheese</li>
@@ -70,13 +69,17 @@
         </ol>
         <h3>Assemble</h3>
         <ol>
-            <li></li>
+        
+            <li><strong>Spread a cup of meat sauce</strong> on the bottom of a 9 x 13 inch casserole dish. Next, add <strong>4 lasagna noodles to bottom.</strong></li>
+            <li><strong>Spread 1/3 of cheese mixture</strong> over noodles followed by <strong>1 1/2 cups of meat sauce</strong></li>
+            <li>Repeat 2 more times, adding two additional layers.</li>
+            <li><strong>Top with 2 1/2 cups of mozzarella cheese.</strong></li>
+            <li><strong>Spray foil with nonstick cooking spray.</strong> Place spray side down on top of dish.</li>
         </ol>
         <h3>Bake</h3>
         <ol>
             <li><strong>Bake for 35 minutes.</strong> Remove cover and bake for 10 additional minutes.</li>
             <li>Remove from over and garnish with fresh parsley. <strong>Let stand for 15 minutes prior to serving</strong> to allow to set.</li>
         </ol>
-
     </body>
 </head>
