add remaining recipe info for lemon herb chicken

--- a/recipes/lemon-herb-chicken.html
+++ b/recipes/lemon-herb-chicken.html
@@ -5,9 +5,24 @@
         <h1>Lemon Herb Chicken</h1>
         <img src="https://www.allrecipes.com/thmb/PUY064UAc9l-v7GxDKZnNCM_SgI=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/Simple-Lemon-Herb-Chicken-2000-610e2f2a1e9a4ba292d775e72f3dc888.jpg" alt="Lemon Herb Chicken">
         <h2>Description</h2>
-        <p>This lemon herb chicken is, simple, easy and delicious dish. With a handful of easy ingredients this tasty chicken can complement almost any side.</p>
+        <p>This lemon herb chicken is, simple, easy and delicious dish. With a handful of easy ingredients this tasty chicken goes great with almost any side.</p>
 
-
+        <h3>Ingredients</h3>
+        <ol>
+            <li>2, 5oz, chicken skinless, boneless chicken breast halves</li>
+            <li>1 medium lemon, juiced</li>
+            <li>1 tbsp olive oil</li>
+            <li>1 pinch oregano</li>
+            <li>1 tbsp parsley</li>
+            <li>pepper and salt to taste</li>
+        </ol>
+        
+        <h3>Steps</h3>
+        <ol>
+            <li><strong>Place chicken in a bowl</strong>pour <strong>1/2 lemon juice</strong> over the top and season with <strong>salt.</strong></li>
+            <li><strong>Heat oil</strong> in medium pan, over medium-low heat. <strong>Add chicken</strong> to the hot oil, along with the remaining <strong>lemon juice and oregano.</strong> Season with salt pepper. Sauté until golden brown and the juices run clear, 5 to 10 minutes per side. </li>
+            <li><strong>Remove from heat.</strong> Garnish with <strong>parsley and serve</strong></li>
+        </ol>
 
 
 
