--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="./recipes/lasagna.html">Lasagna Recipe</a>
+    <div> </div>
+    <a href="./recipes/lemon-herb-chicken.html">Lemon-Herb Chicken Recipe</a>
 </body>
 
 </html>
