add info for pesto shrimp recipe and update index

--- a/recipes/pesto-shrimp.html
+++ b/recipes/pesto-shrimp.html
@@ -2,17 +2,30 @@
 
 <head>
     <body>
+        <h1>Pesto Shrimp</h1>
+        <img src="https://www.allrecipes.com/thmb/cIzgpYqayXKyLtbUZhVCQIjmKhA=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/11808-creamy-pesto-shrimp-ddmfs-beauty-1560-4x3-f45231b50a62405cb7649367f3fc433e.jpg" alt="Pesto Shrimp">
+        <h2>Description</h2>
+        <p>This creamy, easy pesto shrimp is as simple as it is delicious!</p>
+        <h2>Ingredients</h2>
+        <ol>
+            <li>1 lb linguine pasta</li>
+            <li>1/2 cup butter</li>
+            <li>2 cups heavy cream</li>
+            <li>1/2 tsp ground black pepper</li>
+            <li>1 cup grated parmesan cheese</li>
+            <li>1/3 cup pesto</li>
+            <li>1 lb large shrimp, peeled</li>
+        </ol>
 
-
-
-
-
-
-
-
-
+        <h2>Steps</h2>
+        <ol>
+            <li>Fill a large pot with lightly salted water and bring to a boil. <strong>Stir in linguine and return to a boil.</strong> Cook uncovered, stirring occasionally until tender. <strong>About 8-10 minutes; drain.</strong></li>
+            <li>While pasta cooks, <strong>melt butter in a large skillet over medium heat. Stir in cream and pepper.</strong> Cook, stirring frequently, for 6-8 minutes.</li>
+            <li><strong>Stir parmesan into cream sauce until thick. Add pesto.</strong> cook until thickened, 3-5 minutes.</li>
+            <li><strong>Stir in shrimp and cook until pink; about 5 minutes.</strong></li>
+            <li><strong>Serve sauce over hot linguine.</strong></li>
+        </ol>
 
         
-
     </body>
 </head>
