--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
     <h1>Odin Recipes</h1>
     <a href="./recipes/lasagna.html">Lasagna Recipe</a>
     <div> </div>
-    <a href="./recipes/lemon-herb-chicken.html">Lemon-Herb Chicken Recipe</a>\
+    <a href="./recipes/lemon-herb-chicken.html">Lemon-Herb Chicken Recipe</a>
     <div> </div>
-    <a href="./recipes/pesto-shrimp.html">Pesto Shrimp Recipe</a>
+    <a href="./recipes/pesto-shrimp.html"></a>
 </body>
+
 
 </html>
