--- a/recipes/lemon-herb-chicken.html
+++ b/recipes/lemon-herb-chicken.html
@@ -30,7 +30,11 @@
         <li><strong>Heat oil</strong> in medium pan, over medium-low heat. <strong>Add chicken</strong> to the hot oil, along with the remaining <strong>lemon juice and oregano.</strong> Season with salt pepper. Sauté until golden brown and the juices run clear, 5 to 10 minutes per side. </li>
         <li><strong>Remove from heat.</strong> Garnish with <strong>parsley and serve</strong></li>
     </ol>
+    <div>
+
+        
+    </div>
+    <a href="../index.html">Home</a>
 
 </body>
 
-<a href="../index.html">Home</a>
