fix removed line in index

--- a/index.html
+++ b/index.html
@@ -9,11 +9,20 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="./recipes/lasagna.html">Lasagna Recipe</a>
-    <div> </div>
-    <a href="./recipes/lemon-herb-chicken.html">Lemon-Herb Chicken Recipe</a>
-    <div> </div>
-    <a href="./recipes/pesto-shrimp.html"></a>
-</body>
+    <div> 
 
+    </div>
+    <a href="./recipes/lemon-herb-chicken.html">Lemon-Herb Chicken Recipe</a>
+    <div> 
+
+    </div>
+    <a href="./recipes/pesto-shrimp.html">Pesto Shrimp Recipe</a>
+</body>
+<div>
+
+
+        
+</div>
+<a href="../index.html">Home</a>
 
 </html>
